defaults/zonemodel/jwennerb-middleware/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    deployment-zone: jwennerb
    security-zone: frontend
  name: jwennerb-frontend
